Apply grey background to 'you can cancel anytime' block

--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -278,7 +278,7 @@
 
   .component-left-margin-section--headerBlock {
     .component-price-cta__cancel {
-      background-color: #fff000;
+      background-color: #f6f6f6;
     }
 
     .svg-title-circles--left__mobile {
