--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -11,6 +11,7 @@
 @import '~components/headers/countrySwitcherHeader/countrySwitcherHeader';
 @import '~components/leftMarginSection/leftMarginSection';
 @import '~components/priceCta/priceCta';
+@import '~components/customerService/customerService';
 
 
 // ----- Page-Specific Styles ----- //
