Made main a div in the main template.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -71,7 +71,7 @@
     </div>
   </noscript>
 
-	<main id="@mainId" class="gu-content-wrapper"></main>
+	<div id="@mainId" class="gu-content-wrapper"></div>
 
 	<script src="https://polyfill.guim.co.uk/v2/polyfill.min.js?features=default,Array.prototype.find,fetch,Array.prototype.includes"></script>
 	<script defer id="stripe-js" src="https://js.stripe.com/v3/"></script>
