Simplified the layout CSS.

--- a/assets/pages/oneoff-contributions/oneoffContributions.scss
+++ b/assets/pages/oneoff-contributions/oneoffContributions.scss
@@ -224,6 +224,8 @@
 	// ----- Legal ----- //
 
 	.terms-privacy {
+		@include gu-content-filler;
+
 		.component-info-section__content {
 			@include mq($from: desktop) {
 				width: 550px;
@@ -232,6 +234,8 @@
 	}
 
 	.terms-privacy__content {
+		@extend .gu-content-margin;
+    flex: 1 0 auto;
 		background-color: #fff;
 		color: gu-colour(media-garnett-main-1);
 	}
