--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -74,7 +74,7 @@
 	<main id="@mainId" class="gu-content-wrapper"></main>
 
 	<script src="https://polyfill.guim.co.uk/v2/polyfill.min.js?features=default,Array.prototype.find,fetch,Array.prototype.includes"></script>
-	<script defer src="https://js.stripe.com/v3/"></script>
+	<script defer id="stripe-js" src="https://js.stripe.com/v3/"></script>
 	<script type="text/javascript">
     window.guardian = window.guardian || {};
     window.guardian.gitCommitId = '@app.BuildInfo.gitCommitId';
