[stripe-elements-test] Added styles to the stripeInline form

--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -37,7 +37,7 @@
 @import '~components/textInput/textInput';
 @import '~containerisableComponents/contributionsThankYou/contributionsThankYouPage';
 @import '~containerisableComponents/marketingConsent/marketingConsent';
-
+@import '~components/stripeInlineForm/stripeInlineForm';
 
 // ----- Page-Specific Styles ----- //
 
