--- a/assets/components/introduction/circlesIntroduction.scss
+++ b/assets/components/introduction/circlesIntroduction.scss
@@ -29,6 +29,7 @@
 }
 
 .component-circles-introduction__content {
+  @include gu-content-margin;
   padding-bottom: 100px;
 
   @include mq($from: mobileMedium) {
