--- a/assets/components/pageSection/pageSection.scss
+++ b/assets/components/pageSection/pageSection.scss
@@ -6,6 +6,10 @@
   }
 }
 
+.component-page-section__content {
+  @include gu-content-margin;
+}
+
 .component-page-section__body {
   box-sizing: border-box;
 
