Created a new page component to handle .gu-content, adding a main element for a11y. Removed the need for gu-content-filler.

--- a/assets/stylesheets/gu-sass/layout.scss
+++ b/assets/stylesheets/gu-sass/layout.scss
@@ -59,7 +59,7 @@ $cta-height: 44px;
   }
 }
 
-@mixin gu-content-filler {
+.gu-content__main {
   @supports (display: flex) {
     flex: 1 0 auto;
   }
