Switched to using extend for gu-content-margin.

--- a/assets/components/introduction/circlesIntroduction.scss
+++ b/assets/components/introduction/circlesIntroduction.scss
@@ -29,7 +29,7 @@
 }
 
 .component-circles-introduction__content {
-  @include gu-content-margin;
+  @extend .gu-content-margin;
   padding-bottom: 100px;
 
   @include mq($from: mobileMedium) {
