--- a/assets/components/footer/footer.scss
+++ b/assets/components/footer/footer.scss
@@ -15,7 +15,7 @@
 }
 
 .component-footer__content {
-  @include gu-content-margin;
+  @extend .gu-content-margin;
 }
 
 .component-footer__privacy-policy {
