--- a/assets/components/headers/countrySwitcherHeader/countrySwitcherHeader.scss
+++ b/assets/components/headers/countrySwitcherHeader/countrySwitcherHeader.scss
@@ -27,7 +27,7 @@
 }
 
 .component-country-switcher-header__content {
-  @include gu-content-margin;
+  @extend .gu-content-margin;
   padding: ($gu-v-spacing / 2) 0 ($gu-v-spacing/2);
   height: 54px;
 
