--- a/assets/components/headers/simpleHeader/simpleHeader.scss
+++ b/assets/components/headers/simpleHeader/simpleHeader.scss
@@ -14,7 +14,7 @@
 }
 
 .component-simple-header__content {
-  @include gu-content-margin;
+  @extend .gu-content-margin;
   padding: ($gu-v-spacing / 2) 0 $gu-v-spacing;
   height: 68px;
 
