--- a/assets/components/infoSection/infoSection.scss
+++ b/assets/components/infoSection/infoSection.scss
@@ -4,7 +4,7 @@
 	border-top: 1px dotted rgba(0,0,0,0.2);
 	padding-bottom: $gu-v-spacing * 3;
 	padding-top: $gu-v-spacing / 2;
-	@include gu-content-margin;
+	@extend .gu-content-margin;
 
 	@include mq($from: desktop) {
 		padding-bottom: $gu-v-spacing * 4;
