--- a/assets/components/pageSection/pageSection.scss
+++ b/assets/components/pageSection/pageSection.scss
@@ -7,7 +7,7 @@
 }
 
 .component-page-section__content {
-  @include gu-content-margin;
+  @extend .gu-content-margin;
 }
 
 .component-page-section__body {
