--- a/assets/components/readyToSupport/readyToSupport.scss
+++ b/assets/components/readyToSupport/readyToSupport.scss
@@ -3,7 +3,7 @@
 }
 
 .component-ready-to-support__content {
-  @include gu-content-margin;
+  @extend .gu-content-margin;
   padding-bottom: $gu-v-spacing * 4;
   position: relative;
 
