--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -263,7 +263,7 @@
 	}
 
 	.terms-privacy__content {
-		@include gu-content-margin;
+		@extend .gu-content-margin;
     flex: 1 0 auto;
 		background-color: #fff;
 		color: gu-colour(media-garnett-main-1);
