--- a/assets/stylesheets/fallback-pages/unsupportedBrowser.scss
+++ b/assets/stylesheets/fallback-pages/unsupportedBrowser.scss
@@ -21,7 +21,7 @@
 }
 
 .unsupported-browser__header-content {
-  @include gu-content-margin;
+  @extend .gu-content-margin;
   padding: ($gu-v-spacing / 2) 0 $gu-v-spacing;
   height: 68px;
 
@@ -46,7 +46,7 @@
 }
 
 .unsupported-browser__introduction-text {
-  @include gu-content-margin;
+  @extend .gu-content-margin;
   background-color: #e9e939;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -59,7 +59,7 @@
 }
 
 .unsupported-browser__why-support-content {
-  @include gu-content-margin;
+  @extend .gu-content-margin;
 }
 
 .unsupported-browser__why-support-heading {
@@ -91,7 +91,7 @@
 }
 
 .unsupported-browser__footer-content {
-  @include gu-content-margin;
+  @extend .gu-content-margin;
 }
 
 .unsupported-browser__footer-privacy-policy {
