--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -275,5 +275,10 @@
 }
 
 .regular-contribution-payment__or-label {
-	font-size: 14px;
+	font-size: 12px;
+	margin-bottom: 4px;
+}
+
+.component-stripe-inline-form {
+	margin-top: -5px;
 }
