Pulled .gu-content-margin out of info section, to better match previous layout.

--- a/assets/pages/oneoff-contributions/oneoffContributions.scss
+++ b/assets/pages/oneoff-contributions/oneoffContributions.scss
@@ -121,6 +121,10 @@
 
 	// ----- Your contrib
 
+	.oneoff-contrib {
+		@extend .gu-content-margin;
+	}
+
 	.oneoff-contrib__your-contrib {
 		border: none;
 
