[stripe-elements-test] using css classes

--- a/assets/components/stripeInlineForm/stripeInlineForm.scss
+++ b/assets/components/stripeInlineForm/stripeInlineForm.scss
@@ -45,7 +45,7 @@
     background-color: darken(gu-colour(news-garnett-highlight), 5%);
   }
 
-  svg {
+  .svg-arrow-right-straight {
     height: 16px;
     position: absolute;
     top: 14px;
