--- a/assets/pages/oneoff-contributions/oneoffContributions.scss
+++ b/assets/pages/oneoff-contributions/oneoffContributions.scss
@@ -33,6 +33,7 @@
 @import '~containerisableComponents/contributionsThankYou/contributionsThankYouPage';
 @import '~containerisableComponents/marketingConsent/marketingConsent';
 @import '~containerisableComponents/payPalContributionButton/payPalContributionButton';
+@import '~components/stripeInlineForm/stripeInlineForm';
 
 
 // ----- Page-Specific Styles ----- //
@@ -241,4 +242,13 @@
 		font-size: 14px;
 	}
 
+}
+
+.oneoff-contribution-payment__or-label {
+	font-size: 12px;
+	margin-bottom: 4px;
+}
+
+.component-stripe-inline-form {
+	margin-top: -5px;
 }
