Use the correct Optimize id

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -31,7 +31,7 @@
 	h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
 	(a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
 	})(window,document.documentElement,'async-hide','dataLayer',4000,
-	{'GTM-W6GJ68L':true});</script>
+	{'GTM-NZGXNBL':true});</script>
 
 	<!-- Modified Analytics tracking code with Optimize plugin -->
 	<script>
@@ -40,8 +40,8 @@
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-51507017-5', 'auto', {cookieDomain: true, anonymizeIp: true});
-	  ga('require', 'GTM-W6GJ68L');
+	  ga('create', 'UA-51507017-5', 'auto', {cookieDomain: 'auto', anonymizeIp: true});
+	  ga('require', 'GTM-NZGXNBL');
 	</script>
 
 	<link rel="stylesheet" href="@assets(mainStyleBundle)">
