Added modifiers to the name and email inputs, and added spacing above the email input.

--- a/assets/pages/oneoff-contributions/oneoffContributions.scss
+++ b/assets/pages/oneoff-contributions/oneoffContributions.scss
@@ -76,6 +76,10 @@
     }
   }
 
+  .component-text-input--email {
+    margin-top: $gu-v-spacing;
+  }
+
   // ----- Payment methods
 
   .component-page-section--payment-methods {
