Changed where borders are managed.

--- a/assets/components/yourDetails/yourDetails.scss
+++ b/assets/components/yourDetails/yourDetails.scss
@@ -1,4 +1,6 @@
 .component-your-details {
+  border-top: 1px solid gu-colour(garnett-neutral-4);
+
   .component-page-section__header {
     font-family: $gu-egyptian-web;
     font-weight: bold;
