--- a/assets/components/legal/legalSection/legalSection.scss
+++ b/assets/components/legal/legalSection/legalSection.scss
@@ -1,4 +1,6 @@
 .component-legal-section {
+  border-top: 1px solid gu-colour(garnett-neutral-4);
+
   .component-page-section__header {
     @include dropline;
   }
