--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -14,7 +14,6 @@
 @import '~components/errorMessage/errorMessage';
 @import '~components/footer/footer';
 @import '~components/headers/simpleHeader/simpleHeader';
-@import '~components/pageSection/pageSection';
 @import '~components/introduction/introduction';
 @import '~components/introduction/circlesIntroduction';
 @import '~components/legal/contribLegal/contribLegal';
@@ -38,252 +37,142 @@
 @import '~containerisableComponents/contributionsThankYou/contributionsThankYouPage';
 @import '~containerisableComponents/marketingConsent/marketingConsent';
 @import '~components/stripeInlineForm/stripeInlineForm';
+@import '~components/yourContribution/yourContribution';
+@import '~components/yourDetails/yourDetails';
+@import '~components/legal/legalSection/legalSection';
+
 
 // ----- Page-Specific Styles ----- //
 
 #regular-contributions-page {
 
-	// ----- General ----- //
+  // ----- Your contribution
 
-	color: gu-colour(garnett-neutral-1);
+  .component-your-contribution {
+    border-top: none;
 
+    @include multiline-top-border;
+  }
 
-	// ----- Sections ----- //
+  // ----- Your details
 
-	h2 {
-		margin-top: -2px;
-	}
+  .component-your-details {
+    margin-top: $gu-v-spacing * 3;
+  }
 
-	.component-info-section {
-		padding-top: 0;
-		padding-bottom: $gu-v-spacing * 3;
-		border-top: 1px solid gu-colour(garnett-neutral-4);
-	}
+  .component-text-input {
+    border: 2px solid gu-colour(news-garnett-highlight);
+    font-family: $gu-text-sans-web;
+    height: 44px;
+    margin-bottom: 0;
+    width: 100%;
+    box-sizing: border-box;
 
-	.component-info-section__heading {
-		font-family: $gu-egyptian-web;
-		font-size: 24px;
-		line-height: 1.17;
-		padding-top: $gu-v-spacing / 2;
-
-		@include dropline;
-	}
-
-	.component-info-section__content {
-		padding-top: $gu-v-spacing;
-
-		@include mq($from: desktop) {
-			box-sizing: border-box;
-			padding-left: $gu-h-spacing;
-		}
-	}
-
-
-	// ----- Header
-
-	.regular-contrib__header {
-		border-top: none;
-
-		.regular-contrib__heading {
-			margin-top: -15px; /* custom size for header at mobile because of padding */
-			font-size: 24px;
-			line-height: 28px;
-			font-weight: bold;
-			font-family: $gu-egyptian-web;
-
-			@include mq($from: desktop) {
-				margin-top: $gu-v-spacing;
-				font-size: 44px;
-				line-height: 44px;
-			}
-		}
-	}
-
-	.regular-contrib__multiline {
-		width: 100%;
-		border: none;
-		margin: 0;
-
-		&:after {
-			@include multiline(4, gu-colour(garnett-neutral-4));
-			background-color: #fff;
-			content: '';
-			display: block;
-		}
-	}
-
-	// ----- Your contrib
-
-	.regular-contrib {
-		@extend .gu-content-margin;
-	}
-
-	.regular-contrib__your-contrib {
-		border: none;
-
-		.component-info-section__content {
-			position: relative;
-		}
-
-		.component-secure {
-			position: absolute;
-			right: 0;
-			top: $gu-v-spacing;
-			color: gu-colour(garnett-neutral-2);
-
-			&__text {
-				margin-top: 2px;
-			}
-
-			// Fix for IE.
-			svg {
-				width: 13px;
-				fill: gu-colour(garnett-neutral-2);
-			}
-		}
-	}
-
-	.regular-contrib__amount {
-		border-radius: 1000px;
-		font-size: 24px;
-		color: #fff;
-		width: 60px;
-		height: 60px;
-		text-align: center;
-		background-color: gu-colour(neutral-1);
-		line-height: 60px;
-	}
-
-	.regular-contrib__amount--wide-value {
-		padding-left: 1em;
-		padding-right: 1em;
-		width: unset;
-	}
-
-	// ----- Your details
-
-	.regular-contrib__your-details {
-		position: relative;
-
-		@include mq($until: desktop) {
-			.component-signout {
-				position: absolute;
-				top: 0;
-				right: 0;
-			}
-		}
-
-		#last-name {
-			margin-bottom: 0px;
-		}
-
-		input {
-			width: 100%;
-			box-sizing: border-box;
-
-			@include mq($from: desktop) {
-				width: 304px;
-			}
-		}
-
-		.component-select-input {
-			width: 100%;
-			margin-top: $gu-v-spacing;
-			margin-bottom: 0;
-			border: 2px solid gu-colour(news-garnett-highlight);
-
-			@include mq($from: desktop) {
-				width: 304px;
-			}
-		}
-
-	}
-
-	.component-text-input {
-		border: 2px solid gu-colour(news-garnett-highlight);
-		font-family: $gu-text-sans-web;
-		height: 44px;
-		margin-bottom: $gu-v-spacing;
-	}
-
-	// ----- Payment methods
-
-  .regular-contrib__payment-methods {
-
-    .component-direct-debit-pop-up-button {
-		margin-bottom: $gu-v-spacing;
-		width: 100%;
-
-		@include mq($from: phablet) {
-			width: 304px;
-		}
+    &:required {
+      box-shadow: none;
     }
 
-    .component-stripe-pop-up-button {
-      box-sizing: border-box;
-      background-color: gu-colour(news-garnett-highlight);
-      color: gu-colour(garnett-neutral-1);
-      width: 100%;
+    @include mq($from: desktop) {
+      width: 304px;
+    }
+  }
 
-      svg {
-      	fill: gu-colour(garnett-neutral-1);
+  .component-select-input {
+    width: 100%;
+    margin-top: $gu-v-spacing;
+    margin-bottom: 0;
+    border: 2px solid gu-colour(news-garnett-highlight);
+
+    @include mq($from: desktop) {
+      width: 304px;
+    }
+  }
+
+  // ----- Payment methods
+
+  .component-page-section--payment-methods {
+    border-top: 1px solid gu-colour(garnett-neutral-4);
+    margin-top: $gu-v-spacing * 3;
+
+    .component-page-section__body {
+      padding-top: $gu-v-spacing;
+
+      @include mq($from: desktop) {
+        padding-left: $gu-h-spacing;
       }
+    }
 
-      @include mq($from: phablet) {
-        width: 304px;
-      }
+    .component-page-section__header {
+      font-family: $gu-egyptian-web;
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 1.17;
+      padding-top: $gu-v-spacing / 2;
 
-			&:hover {
-				background-color: darken(gu-colour(news-garnett-highlight), 5%);
-			}
+      @include dropline;
+    }
+  }
+
+  .component-direct-debit-pop-up-button {
+    margin-bottom: $gu-v-spacing;
+    width: 100%;
+
+    @include mq($from: phablet) {
+      width: 304px;
+    }
+  }
+
+  .component-stripe-pop-up-button {
+    box-sizing: border-box;
+    background-color: gu-colour(news-garnett-highlight);
+    color: gu-colour(garnett-neutral-1);
+    width: 100%;
+
+    .svg-credit-card {
+      fill: gu-colour(garnett-neutral-1);
+    }
+
+    @include mq($from: phablet) {
+      width: 304px;
+    }
+
+    &:hover {
+      background-color: darken(gu-colour(news-garnett-highlight), 5%);
     }
   }
 
   .component-paypal-button-checkout {
-  	margin-top: $gu-v-spacing;
-  	width: 100%;
+    margin-top: $gu-v-spacing;
+    width: 100%;
 
-		@include mq($from: phablet) {
-			width: 304px;
-		}
+    @include mq($from: phablet) {
+      width: 304px;
+    }
   }
 
   .component-payment-error {
-		margin-bottom: $gu-v-spacing;
-	}
+    margin-bottom: $gu-v-spacing;
+  }
 
-	.component-payment-error--paypal-express {
-		margin-top: $gu-v-spacing;
-	}
+  .component-payment-error--paypal-express {
+    margin-top: $gu-v-spacing;
+  }
 
-	// ----- Legal ----- //
+  // ----- Legal ----- //
 
-	.terms-privacy {
-		.component-info-section__content {
-			@include mq($from: desktop) {
-				width: 550px;
-			}
-		}
-	}
-
-	.terms-privacy__content {
-		@extend .gu-content-margin;
-		background-color: #fff;
-		color: gu-colour(media-garnett-main-1);
-	}
-
-	.component-contrib-legal {
-		padding-top: $gu-v-spacing;
-		padding-bottom: $gu-v-spacing * 2;
-		font-size: 14px;
-	}
+  .component-legal-section {
+    margin-top: $gu-v-spacing * 3;
+    margin-bottom: $gu-v-spacing * 2;
+  }
 }
 
 .regular-contribution-payment__or-label {
-	font-size: 12px;
-	margin-bottom: 4px;
+  font-size: 12px;
+  margin-bottom: 4px;
+  font-family: $gu-sans-web;
 }
 
 .component-stripe-inline-form {
-	margin-top: -5px;
+  margin-top: -5px;
+  font-family: $gu-sans-web;
 }
