Added some spacing to the last name field.

--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -88,6 +88,10 @@
     }
   }
 
+  .component-text-input--last-name {
+    margin-top: $gu-v-spacing;
+  }
+
   // ----- Payment methods
 
   .component-page-section--payment-methods {
