--- a/assets/components/progressMessage/progressMessage.scss
+++ b/assets/components/progressMessage/progressMessage.scss
@@ -14,6 +14,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
+  font-family: $gu-text-sans-web;
 
   .component-progress-message__dialog {
     font-size: 20px;
