--- a/assets/components/paymentButtons/stripePopUpButton/stripePopUpButton.scss
+++ b/assets/components/paymentButtons/stripePopUpButton/stripePopUpButton.scss
@@ -1,5 +1,4 @@
 .component-stripe-pop-up-button {
-  box-sizing: border-box;
   background-color: gu-colour(news-garnett-highlight);
   border: none;
   border-radius: 600px;
@@ -27,7 +26,7 @@
     fill: gu-colour(garnett-neutral-1);
   }
 
-  @include mq($from: phablet) {
+  @include mq($from: mobileMedium) {
     width: 304px;
   }
 
