--- a/assets/components/stripeInlineForm/stripeInlineForm.scss
+++ b/assets/components/stripeInlineForm/stripeInlineForm.scss
@@ -17,6 +17,19 @@
 
 }
 
+.component-stripe-inline-form__card-element--disable {
+  background-color: gu-colour(garnett-neutral-4);
+  color: gu-colour(garnett-neutral-2);
+  border: 2px solid gu-colour(garnett-neutral-4);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
 .component-stripe-inline-form__label-content {
   font-size: 12px;
 }
@@ -52,3 +65,17 @@
     left: calc(100% - 34px);
   }
 }
+
+.component-stripe-inline-form__submit-payment--disable {
+  background-color: gu-colour(garnett-neutral-4);
+  color: gu-colour(garnett-neutral-2);
+
+  svg {
+    fill: gu-colour(garnett-neutral-2);
+  }
+
+  &:hover {
+    background-color: gu-colour(garnett-neutral-4);
+  }
+}
+
