Create a feature switch for Optimize tagging

--- a/app/views/switchesScript.scala.html
+++ b/app/views/switchesScript.scala.html
@@ -14,5 +14,6 @@
         payPal: '@switches.recurringPaymentMethods.payPal',
         directDebit: '@switches.recurringPaymentMethods.directDebit',
       },
+      optimize: '@switches.optimize',
     };
 </script>
