--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -28,26 +28,7 @@
 	<title>@title</title>
 	<meta property="og:title" content="@title"/>
 
-	<!--- Optimize scripts, see: https://support.google.com/optimize/answer/7359264 -->
-	<!-- Page-hiding snippet -->
-	<style>.async-hide { opacity: 0 !important} </style>
-	<script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
-	h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
-	(a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
-	})(window,document.documentElement,'async-hide','dataLayer',4000,
-	{'GTM-NZGXNBL':true});</script>
-
-	<!-- Modified Analytics tracking code with Optimize plugin -->
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-51507017-5', 'auto', {cookieDomain: 'auto', anonymizeIp: true});
-	  ga('require', 'GTM-NZGXNBL');
-	</script>
-	<!-- End Optimize -->
+	@optimizeScript()
 
 	<link rel="stylesheet" href="@assets(mainStyleBundle)">
 	<link rel="shortcut icon" type="image/png" href="@assets("images/favicons/32x32.ico")">
