--- a/assets/components/paymentButtons/stripePopUpButton/stripePopUpButton.scss
+++ b/assets/components/paymentButtons/stripePopUpButton/stripePopUpButton.scss
@@ -33,7 +33,7 @@
 .component-stripe-pop-up-button--disable {
   background-color: gu-colour(garnett-neutral-4);
   color: gu-colour(garnett-neutral-2);
-
+  cursor: auto;
   svg {
     fill: gu-colour(garnett-neutral-2);
   }
