--- a/app/views/switchesScript.scala.html
+++ b/app/views/switchesScript.scala.html
@@ -1,19 +1,9 @@
 @import switchboard.Switches
+@import views.ViewHelpers.printSwitches
 
 @(switches: Switches)
 
 <script type="text/javascript">
     window.guardian = window.guardian || {};
-    guardian.switches = {
-      oneOffPaymentMethods: {
-        stripe: '@switches.onOffPaymentMethods.stripe',
-        payPal: '@switches.onOffPaymentMethods.payPal',
-      },
-      recurringPaymentMethods: {
-        stripe: '@switches.recurringPaymentMethods.stripe',
-        payPal: '@switches.recurringPaymentMethods.payPal',
-        directDebit: '@switches.recurringPaymentMethods.directDebit',
-      },
-      optimize: '@switches.optimize',
-    };
+    guardian.switches = @Html(printSwitches(switches));
 </script>
