Moved copy that explains all fields are required to bottom of section, tweaked styling.

--- a/assets/components/yourDetails/yourDetails.scss
+++ b/assets/components/yourDetails/yourDetails.scss
@@ -23,3 +23,11 @@
     }
   }
 }
+
+.component-your-details__info {
+  font-size: 14px;
+  font-family: $gu-text-sans-web;
+  font-weight: 300;
+  margin-top: $gu-v-spacing;
+  font-style: italic;
+}
