--- a/assets/pages/oneoff-contributions/oneoffContributions.scss
+++ b/assets/pages/oneoff-contributions/oneoffContributions.scss
@@ -46,7 +46,7 @@
 
   // ----- Your details
 
-  .component-text-input {
+  .component-text-input__input {
     border: 2px solid gu-colour(news-garnett-highlight);
     font-family: $gu-text-sans-web;
     height: 44px;
