--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -49,7 +49,7 @@
 
   // ----- Your details
 
-  .component-text-input {
+  .component-text-input__input {
     border: 2px solid gu-colour(news-garnett-highlight);
     font-family: $gu-text-sans-web;
     height: 44px;
