Tidied up the select input.

--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -66,7 +66,7 @@
     }
   }
 
-  .component-select-input {
+  .component-select-input__select {
     width: 100%;
     margin-top: $gu-v-spacing;
     margin-bottom: 0;
