Made accessibility-hint available as a mixin.

--- a/assets/stylesheets/gu-sass/accessibility.scss
+++ b/assets/stylesheets/gu-sass/accessibility.scss
@@ -1,10 +1,14 @@
 // ----- Assistive technologies guidance (non-visible) ----- //
 
+@mixin accessibility-hint {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
 .accessibility-hint {
-  position:absolute;
-  left:-10000px;
-  top:auto;
-  width:1px;
-  height:1px;
-  overflow:hidden;
+  @include accessibility-hint;
 }
