Import SelectInput stylesheet for the showcase page so that it picks up the correct styles.

--- a/assets/pages/support-landing/supportLanding.scss
+++ b/assets/pages/support-landing/supportLanding.scss
@@ -7,6 +7,7 @@
 
 @import '../../components/headers/countrySwitcherHeader/countrySwitcherHeader';
 @import '../../components/countryGroupSwitcher/countryGroupSwitcher';
+@import '../../components/selectInput/selectInput';
 @import '../../components/introduction/introduction';
 @import '../../components/introduction/circlesIntroduction';
 @import '../../components/contribute/contribute';
