Applied correct colours to the labels.

--- a/assets/components/selectInput/selectInput.scss
+++ b/assets/components/selectInput/selectInput.scss
@@ -1,6 +1,7 @@
 .component-select-input__label {
   font-size: 14px;
   font-family: $gu-text-sans-web;
+  color: gu-colour(garnett-neutral-1);
 }
 
 .component-select-input__select {
