Reinstate correct background colour for IE.

--- a/assets/components/countryGroupSwitcher/countryGroupSwitcher.scss
+++ b/assets/components/countryGroupSwitcher/countryGroupSwitcher.scss
@@ -29,6 +29,10 @@
     &:hover {
       text-decoration: underline;
     }
+
+    &::-ms-expand {
+      background-color: transparent;
+    }
   }
 
   .component-select-input__label {
