Created a DigitalSubscriptions component by duplicating the ThreeSubscriptions component.

--- a/assets/pages/subscriptions-landing/subscriptionsLanding.scss
+++ b/assets/pages/subscriptions-landing/subscriptionsLanding.scss
@@ -19,6 +19,7 @@
 @import '~components/readyToSupport/readyToSupport';
 @import '~components/svgs/svg';
 @import '~components/threeSubscriptions/threeSubscriptions';
+@import '~components/digitalSubscriptions/digitalSubscriptions';
 @import '~components/whySupport/whySupport';
 
 
