Created a PaperSubscriptions component by duplicating the ThreeSubscriptions component, and allowed viewing the split subscriptions variant with a query param.

--- a/assets/pages/subscriptions-landing/subscriptionsLanding.scss
+++ b/assets/pages/subscriptions-landing/subscriptionsLanding.scss
@@ -20,6 +20,7 @@
 @import '~components/svgs/svg';
 @import '~components/threeSubscriptions/threeSubscriptions';
 @import '~components/digitalSubscriptions/digitalSubscriptions';
+@import '~components/paperSubscriptions/paperSubscriptions';
 @import '~components/whySupport/whySupport';
 
 
@@ -27,7 +28,7 @@
 
 #subscriptions-landing-page {
 
-  .component-three-subscriptions {
+  .component-digital-subscriptions, .component-three-subscriptions {
     @include multiline-top-border;
 
     border-top: none;
