--- a/app/views/monthlyContributions.scala.html
+++ b/app/views/monthlyContributions.scala.html
@@ -10,7 +10,7 @@
   id: String,
   js: String,
   css: String,
-  user: IdUser,
+  user: Option[IdUser],
   uatMode: Boolean,
   defaultStripeConfig: StripeConfig,
   uatStripeConfig: StripeConfig,
