Revert "Disabling stripe button after submit and added the stripe Inline flow as the new control and releasing the new stripe flow"

--- a/assets/pages/oneoff-contributions/oneoffContributions.scss
+++ b/assets/pages/oneoff-contributions/oneoffContributions.scss
@@ -19,6 +19,7 @@
 @import '~components/legal/termsPrivacy/termsPrivacy';
 @import '~components/pageSection/pageSection';
 @import '~components/paymentAmount/paymentAmount';
+@import '~components/paymentButtons/stripePopUpButton/stripePopUpButton';
 @import '~components/progressMessage/progressMessage';
 @import '~components/questionsContact/questionsContact';
 @import '~components/secure/secure';
