--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -22,6 +22,7 @@
 @import '~components/paymentAmount/paymentAmount';
 @import '~components/paymentButtons/directDebitPopUpButton/directDebitPopUpButton';
 @import '~components/paymentButtons/payPalExpressButton/payPalExpressButton';
+@import '~components/paymentButtons/stripePopUpButton/stripePopUpButton';
 @import '~components/progressMessage/progressMessage';
 @import '~components/questionsContact/questionsContact';
 @import '~components/secure/secure';
