--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -79,6 +79,10 @@
     }
   }
 
+  .component-text-input--email {
+    margin-bottom: $gu-v-spacing;
+  }
+
   .component-text-input--last-name {
     margin-top: $gu-v-spacing;
   }
