Use ~ in import paths in supportLanding.scss & error.scss

--- a/assets/pages/error/error.scss
+++ b/assets/pages/error/error.scss
@@ -1,17 +1,17 @@
 // -----  gu-sass ----- //
 
-@import '../../stylesheets/gu-sass/gu-sass';
+@import '~stylesheets/gu-sass/gu-sass';
 
 
 // ----- Shared Components ----- //
 
-@import '../../components/headers/simpleHeader/simpleHeader';
-@import '../../components/footer/footer';
-@import '../../components/introduction/introduction';
-@import '../../components/introduction/squaresIntroduction';
-@import '../../components/highlights/highlights';
-@import '../../components/pageSection/pageSection';
-@import '../../components/ctaLink/ctaLink';
+@import '~components/headers/simpleHeader/simpleHeader';
+@import '~components/footer/footer';
+@import '~components/introduction/introduction';
+@import '~components/introduction/squaresIntroduction';
+@import '~components/highlights/highlights';
+@import '~components/pageSection/pageSection';
+@import '~components/ctaLink/ctaLink';
 
 
 // ----- Page ----- //
