Use Windrush svg on the Digital Pack page

--- a/assets/pages/digital-subscription-landing/components/independentJournalismSection.scss
+++ b/assets/pages/digital-subscription-landing/components/independentJournalismSection.scss
@@ -51,7 +51,7 @@
   position: relative;
 }
 
-.svg-amber-rudd {
+.svg-windrush {
   position: relative;
   top: -81px;
   margin-bottom: -143px;
@@ -73,7 +73,7 @@
 }
 
 
-.svg-amber-zuck {
+.svg-windrush-zuck {
   left: -112px;
   position:absolute;
   top: -221px;
