--- a/assets/components/paperSubscriptions/paperSubscriptions.scss
+++ b/assets/components/paperSubscriptions/paperSubscriptions.scss
@@ -65,7 +65,7 @@
     }
   }
 
-  .component-subscription-bundle--weekly, .component-subscription-bundle--paper {
+  .component-subscription-bundle--paper, .component-subscription-bundle--paper-digital {
     @include mq($from: leftCol) {
       @include dropline;
     }
@@ -107,20 +107,13 @@
   }
 
   .component-feature-list {
+    padding-left: 0;
     font-size: 16px;
     line-height: 1.25;
   }
 
-  .component-feature-list--paper {
-    list-style-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 28 28"><path fill="#0084c6" d="M7.885 25.74L0 14.82l3.22-3.217L8.3 16.74 24.695 2.26 28 5.565"/></svg>');
-  }
-
-  .component-feature-list--paper-digital {
-    list-style-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 28 28"><path fill="#bb3b80" d="M7.885 25.74L0 14.82l3.22-3.217L8.3 16.74 24.695 2.26 28 5.565"/></svg>');
-  }
-
-  .component-feature-list--weekly {
-    list-style-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 28 28"><path fill="#ff4e36" d="M7.885 25.74L0 14.82l3.22-3.217L8.3 16.74 24.695 2.26 28 5.565"/></svg>');
+  .component-feature-list__item {
+    margin-left: 0;
   }
 
   .component-cta-link {
