add annual contribution test

--- a/assets/components/contributionSelection/contributionSelection.scss
+++ b/assets/components/contributionSelection/contributionSelection.scss
@@ -46,6 +46,23 @@
   }
 }
 
+.component-contribution-selection--annual {
+  .component-contribution-selection__type {
+    .component-radio-toggle {
+      border: none;
+    }
+    .component-radio-toggle__button {
+      display: inline-block;
+      border: 0.125rem solid #ffe500;
+      border-radius: 37.5rem;
+      margin: 0 10px 0 0;
+    }
+  }
+  .component-number-input {
+    width: 161px;
+  }
+}
+
 .component-contribution-selection__type {
   font-size: 14px;
   line-height: 14px;
