--- a/assets/components/subscriptionsThankYou/subscriptionsThankYou.scss
+++ b/assets/components/subscriptionsThankYou/subscriptionsThankYou.scss
@@ -8,6 +8,10 @@
     color: gu-colour(garnett-neutral-1);
     margin-bottom: $gu-v-spacing;
 
+    @include mq($from: mobileLandscape) {
+      width: 300px;
+    }
+
     &:hover {
       background-color: gu-colour(garnett-neutral-1);
       color: #fff;
@@ -23,14 +27,27 @@
       top: 30%;
     }
   }
+
+  .component-left-margin-section__content {
+    @include mq($from: tablet) {
+      border-left: 1px solid gu-colour(garnett-neutral-4);
+    }
+  }
 }
 
-.component-subscriptions-thank-you__premium-ctas {
+.component-subscriptions-thank-you__ctas {
   margin-bottom: $gu-v-spacing * 2;
+
+  @include mq($from: tablet) {
+    display: inline-block;
+    vertical-align: top;
+    margin-top: $gu-v-spacing;
+    margin-left: $gu-h-spacing;
+  }
 }
 
 .component-subscriptions-thank-you__content {
-  padding: 2px ($gu-h-spacing / 2) $gu-v-spacing;
+  padding: 2px ($gu-h-spacing / 2) 0;
 }
 
 .component-subscriptions-thank-you__heading {
@@ -38,6 +55,16 @@
   line-height: 1.18;
   font-weight: 300;
   font-family: $gu-egyptian-web;
+
+  @include mq($from: tablet) {
+    font-size: 28px;
+    width: 300px;
+  }
+
+  @include mq($from: desktop) {
+    font-size: 36px;
+    width: 250px;
+  }
 }
 
 .component-subscriptions-thank-you__congrats {
@@ -50,6 +77,12 @@
   font-family: $gu-egyptian-web;
   color: gu-colour(media-garnett-main-1);
   margin: $gu-v-spacing 0 ($gu-v-spacing * 2);
+
+  @include mq($from: tablet) {
+    display: inline-block;
+    width: 300px;
+    vertical-align: top;
+  }
 }
 
 .component-subscriptions-thank-you__strong {
