--- a/app/views/newMain.scala.html
+++ b/app/views/newMain.scala.html
@@ -24,8 +24,11 @@
 </head>
 <body>
 
-  <h1>@title</h1>
-  <p>@description</p>
+	@if(switches.experiments.get("newPaymentFlow").exists(_.isParticipating)) {
+
+		@newPaymentFlow()
+	
+	}
   
 </body>
 </html>
