--- a/app/views/newMain.scala.html
+++ b/app/views/newMain.scala.html
@@ -21,6 +21,7 @@
 	<title>@title</title>
 	<meta property="og:title" content="@title"/>
 
+	<link rel=stylesheet href=/assets-payment/styles.css>
 </head>
 <body>
 
