Identity support navigation

--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -100,7 +100,7 @@
     <small>© 2018 Guardian News and Media Limited or its affiliated companies. All rights reserved.</small>
   </div>
 
-  <nav>
+  <nav class="support">
     <ul>
       <li><a href="#">Help</a></li>
       <li><a href="#">Terms &amp; Conditions</a></li>
